# creator-standard

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .solitarc.js  Anchor.toml  Cargo.toml  Makefile  README.md  generate-idls.sh  index.html  jest.config.js  modules.html  package-lock.json  package.json  tsconfig.json  utils.ts
assets/: highlight.css  search.js
classes/: AccountBalances.html  AccountNotFoundError.html  AddressDisallowedError.html  DataTypeMismatchError.html  InusufficientMinimumCreatorShareError.html  InvalidAccountTypeError.html  InvalidAmountError.html  InvalidAuthorityError.html  InvalidCloseTokenAccountError.html  InvalidCollectorError.html  InvalidFreezeAuthorityError.html  InvalidHolderTokenAccountError.html  InvalidMintAuthorityError.html  InvalidMintError.html  InvalidMintManagerError.html  InvalidMintMetadataError.html  InvalidPostTransferInstructionError.html  InvalidPreTransferInstructionError.html  InvalidRulesetAuthorityError.html  InvalidRulesetCollectorError.html  InvalidRulesetError.html  InvalidTargetTokenAccountError.html  InvalidTokenAccountError.html  InvalidTokenUserError.html  InvlaidHolderTokenAccountError.html  MintManager.html  NotEnoughRemainingAccountsError.html  ProgramDisallowedError.html  ProgramNotAllowedError.html  Ruleset.html  TokenAlreadyInUseError.html  TokenCurentlyInUseError.html  UnknownAccountError.html
enums/: AccountType.html
functions/: createApproveAndSetInUseByInstruction.html  createApproveInstruction.html  createBurnInstruction.html  createCloseInstruction.html  createCloseMintManagerInstruction.html  createCloseRulesetInstruction.html  createInitAccountInstruction.html  createInitMintInstruction.html  createInitMintManagerInstruction.html  createInitRulesetInstruction.html  createInitializeAccountInstruction.html  createInitializeMintInstruction.html  createPostTransferInstruction.html  createPreTransferInstruction.html  createRemoveInUseByInstruction.html  createRevokeInstruction.html  createSetInUseByInstruction.html  createTransferInstruction.html  createUpdateMintManagerInstruction.html  createUpdateRulesetInstruction.html  errorFromCode.html  errorFromName.html  findMintEditionId.html  findMintManagerId.html  findMintMetadataId.html  findRulesetId.html  handleRemainingAccountsForRuleset.html  identifyCCSToken.html
program/: Cargo.toml  build.sh  rustfmt.toml
program/src/: errors.rs  instruction.rs  lib.rs  pda.rs  state.rs  utils.rs
program/src/instructions/: client.rs  init.rs  init_mint.rs  init_mint_manager.rs  mod.rs  token.rs
program/src/instructions/mint_manager/: init_mint_manager.rs  mod.rs  update_mint_manager.rs
program/src/instructions/ruleset/: init_ruleset.rs  update_ruleset.rs
program/src/instructions/standard/: init_standard.rs  mod.rs  update_standard.rs
program/src/instructions/token/: approve.rs  burn.rs  close.rs  init_account.rs  init_mint.rs  post_transfer.rs  pre_transfer.rs  revoke.rs  transfer.rs
program/src/state/: mint_manager.rs  mod.rs
programs/cardinal-creator-standard/: Cargo.toml
programs/cardinal-creator-standard/src/: errors.rs  hash.rs  lib.rs  state.rs  utils.rs
programs/cardinal-creator-standard/src/instructions/: client.rs  instruction.rs  mod.rs
programs/cardinal-creator-standard/src/instructions/mint_manager/: close_mint_manager.rs  init_mint_manager.rs  mod.rs  remove_in_use_by.rs  set_in_use_by.rs  update_mint_manager.rs
programs/cardinal-creator-standard/src/instructions/ruleset/: close_ruleset.rs  init_ruleset.rs  mod.rs  update_ruleset.rs
programs/cardinal-creator-standard/src/instructions/token/: approve.rs  approve_and_set_in_use_by.rs  burn.rs  close.rs  init_mint.rs  initialize_account.rs  initialize_mint.rs  mod.rs  revoke.rs  transfer.rs
programs/cardinal-creator-standard/src/state/: account_balance.rs  account_balances.rs  mint_manager.rs  mod.rs  ruleset.rs  shared.rs
programs/solana-nft-programs-creator-standard/: Cargo.toml
programs/solana-nft-programs-creator-standard/src/: lib.rs  state.rs
programs/solana-nft-programs-creator-standard/src/instructions/: client.rs
programs/solana-nft-programs-creator-standard/src/instructions/mint_manager/: close_mint_manager.rs  init_mint_manager.rs  remove_in_use_by.rs
programs/solana-nft-programs-creator-standard/src/instructions/token/: burn.rs  initialize_account.rs  mod.rs
sdk/: .eslintrc.js  .eslintrc.json  .solitarc.js  cardinal_creator_standard.json  constants.ts  generate-idls.sh  index.ts  instructionHelpers.ts  package.json  pda.ts  tsconfig.json  utils.ts
sdk-anchor/: pda.ts
tests/: approve.test.ts  mintManagerInit.test.ts  mintManagerInitUpdate.test.ts  revoke.test.ts  transfer.test.ts  utils.ts
tools/: closeMintManager.ts  closeRuleset.ts  createCCSToken.ts  createCSSToken.ts  createRuleset.ts  getAllCCSTokens.ts  getAllRulesets.ts  getAllUniqueMintManagerAuthorities.ts  getRuleset.ts  identifyCCSToken.ts  utils.ts
types/: AccountBalance.html  AccountBalancesArgs.html  ApproveAndSetInUseByInstructionAccounts.html  ApproveAndSetInUseByInstructionArgs.html  (+34 more)
(+121 files in other folders)
