[package]
name = "cardinal-creator-standard"
version = "0.1.0"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-creator-standard"
authors = ["Cardinal <team@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[dependencies]
solana-program = "1.14.4"
shank = "^0.0.5"

[lib]
crate-type = ["cdylib", "lib"]
