[package]
name = "cardinal-creator-standard"
version = "0.1.0"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-creator-standard"
authors = ["Cardinal <team@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_creator_standard"

[dependencies]
solana-program = "1.14.4"
shank = "^0.0.5"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint", ] }
thiserror = "^1.0.24"
borsh = "0.9.3"

[dev-dependencies]
solana-program-test = "1.14.4"
solana-sdk = "1.14.4"
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"
