[package]
name = "cardinal-creator-standard"
version = "0.1.2"
description = "Cardinal creator standard"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-creator-standard"
authors = ["Cardinal <team@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]


[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_creator_standard"

[dependencies]
solana-program = "1.10.41"
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
spl-token = { version = "~3.3.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = [ "no-entrypoint", ] }
arrayref = "0.3.6"