[package]
name = "cardinal-creator-standard"
version = "2.2.0"
description = "The Cardinal Creator Standard"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-creator-standard"
authors = ["Cardinal <team@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_creator_standard"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.29"
shank = "^0.0.5"
spl-token = { version = "^3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = [ "no-entrypoint" ] }
thiserror = "^1.0.24"
borsh = "0.9.3"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-security-txt = "1.0.1"
sha2 = "0.9.2"
bs58 = "0.3.1"
lazy_format = "2.0.0"

[dev-dependencies]
solana-sdk = "1.14.4"
tokio = { version = "1.24.1", features = ["full"] }
anyhow = "1.0.52"