[package]
name = "solana-nft-programs-creator-standard"
version = "1.0.0"
description = "The Creator Standard"
edition = "2021"
repository = "https://github.com/solana-nft-programs/creator-standard"
license = "AGPL-3.0"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_programs_creator_standard"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.29"
shank = "^0.0.5"
spl-token = { version = "^3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = [ "no-entrypoint"] }
thiserror = "^1.0.24"
borsh = "0.9.3"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-security-txt = "1.0.1"
sha2 = "0.9.2"
bs58 = "0.3.1"
lazy_format = "2.0.0"

[dev-dependencies]
solana-sdk = "1.14.4"
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"